--- a/PriceApp.UI/Settings/SettingsView.xaml
+++ b/PriceApp.UI/Settings/SettingsView.xaml
@@ -6,7 +6,31 @@
         xmlns:local="clr-namespace:PriceApp.UI.Settings"
         mc:Ignorable="d"
         Title="{DynamicResource Configuration} " Height="450" Width="800">
-    <Grid>
-        
+    <Grid Margin="45,30,45,30" >
+        <Grid.RowDefinitions>
+            <RowDefinition/>
+            <RowDefinition/>
+            <RowDefinition Height="Auto"/>
+        </Grid.RowDefinitions>
+        <Grid.ColumnDefinitions>
+            <ColumnDefinition/>
+            <ColumnDefinition/>
+        </Grid.ColumnDefinitions>
+        <GroupBox Header="{DynamicResource Configuration_Base}" Grid.Column="0" Grid.Row="0" FontSize="20" FontFamily="Perpetua Titling MT" >
+            <Grid>
+                <Grid.ColumnDefinitions>
+                    <ColumnDefinition/>
+                    <ColumnDefinition/>
+                </Grid.ColumnDefinitions>
+                <Label Grid.Column="0" Content="{DynamicResource Language}" HorizontalAlignment="Left" FontSize="16" VerticalAlignment="Center"/>
+                <ComboBox x:Name ="Cultures" Grid.Column="1"  Margin="0,56"
+                          SelectedItem="{Binding Path=SelectedCulture, Mode=OneWayToSource}"/>
+
+            </Grid>
+        </GroupBox>
+        <Button Name="SaveSettings" Content="{DynamicResource Save_button}" 
+                Grid.Row="2" Grid.Column="0" Grid.ColumnSpan="2" FontSize="20" HorizontalAlignment="Right" Padding="20,0,20,0"/>
+
+
     </Grid>
 </Window>
