--- a/PriceApp.UI/Resources/lang.en-US.xaml
+++ b/PriceApp.UI/Resources/lang.en-US.xaml
@@ -7,5 +7,13 @@
     <v:String x:Key="Configuration_Base">Base settings</v:String>
     <v:String x:Key="Language">Application language</v:String>
     <v:String x:Key="Save_button">Save</v:String>
+    <v:String x:Key="Provider">Provider</v:String>
+    <v:String x:Key="FullPrepayment">Full Prepayment</v:String>
+    <v:String x:Key="FullPostpayment">Full Postpayment</v:String>
+    <v:String x:Key="Mixed">Partly Postpayment/Prepayment</v:String>
+    <v:String x:Key="PartlyPrepayment">Two-part Prepayment</v:String>
+    <v:String x:Key="PaymentType">Type of payment</v:String>
+    <v:String x:Key="Price">Offer price</v:String>
+    <v:String x:Key="Delete_button">Delete</v:String>
 
 </ResourceDictionary>
