--- a/PriceApp.UI/Views/ConfigurationView.xaml
+++ b/PriceApp.UI/Views/ConfigurationView.xaml
@@ -5,31 +5,77 @@
         xmlns:mc="http://schemas.openxmlformats.org/markup-compatibility/2006"
         xmlns:local="clr-namespace:PriceApp.UI.Views"
         mc:Ignorable="d"
-        Title="{DynamicResource Configuration}" Height="450" Width="800">
-    <Grid Margin="45,30,45,30" >
+        Title="{DynamicResource Configuration}" Height="600" Width="400" Foreground="White">
+    <Window.Background>
+        <ImageBrush ImageSource="/PriceApp.UI;component/Images/bg.jpeg"/>
+    </Window.Background>
+    <Grid Margin="15,15" >
         <Grid.RowDefinitions>
             <RowDefinition/>
             <RowDefinition/>
-            <RowDefinition Height="Auto"/>
+            <RowDefinition Height="0.2*"/>
         </Grid.RowDefinitions>
-        <Grid.ColumnDefinitions>
-            <ColumnDefinition/>
-            <ColumnDefinition/>
-        </Grid.ColumnDefinitions>
-        <GroupBox Header="{DynamicResource Configuration_Base}" Grid.Column="0" Grid.Row="0" FontSize="20" FontFamily="Perpetua Titling MT" >
+        <GroupBox Header="{DynamicResource Configuration_Base}" Grid.Column="0" Grid.Row="0" FontSize="18" FontFamily="Perpetua Titling MT" >
             <Grid>
+                <Grid.RowDefinitions>
+                    <RowDefinition/>
+                    <RowDefinition/>
+                </Grid.RowDefinitions>
                 <Grid.ColumnDefinitions>
                     <ColumnDefinition/>
                     <ColumnDefinition/>
                 </Grid.ColumnDefinitions>
-                <Label Grid.Column="0" Content="{DynamicResource Language}" HorizontalAlignment="Left" FontSize="16" VerticalAlignment="Center"/>
-                <ComboBox x:Name ="Cultures" Grid.Column="1"  Margin="0,53"
-                          SelectedItem="{Binding Path=SelectedCulture}" DisplayMemberPath="DisplayName"/>
+                <TextBlock Grid.Column="0" Grid.Row="0" Text="{DynamicResource Language}" HorizontalAlignment="Left" FontSize="16" VerticalAlignment="Center"/>
+                <ComboBox x:Name ="Cultures" Grid.Column="1" Grid.Row="0" Height="28" ItemsSource="{Binding Cultures}"
+                          SelectedItem="{Binding Path=SelectedCulture}" DisplayMemberPath="DisplayName">
+                    <ComboBox.Background>
+                        <LinearGradientBrush EndPoint="0,1" StartPoint="0,0">
+                            <GradientStop Color="#FFF0F0F0" Offset="0"/>
+                            <GradientStop Color="White" Offset="1"/>
+                        </LinearGradientBrush>
+                    </ComboBox.Background>
+                </ComboBox>
 
+                <TextBlock Grid.Column="0" Grid.Row="1" Text="{DynamicResource RefinancingRate}" 
+                       HorizontalAlignment="Left" FontSize="16" TextWrapping="WrapWithOverflow"
+                       VerticalAlignment="Center"/>
+                <TextBox x:Name ="ConfigurationSettings_RefinancingRate" Grid.Column="1" Grid.Row="1"
+                         Height="25px" TextAlignment="Right"/>
             </Grid>
         </GroupBox>
-        <Button Name="SaveSettings" Content="{DynamicResource Save_button}" 
-                Grid.Row="2" Grid.Column="0" Grid.ColumnSpan="2" FontSize="20" HorizontalAlignment="Right" Padding="20,0,20,0"/>
+
+        <GroupBox Grid.Row="1" Header="{DynamicResource UserSettings}" FontSize="18" FontFamily="Perpetua Titling MT" >
+            <Grid>
+                <Grid.RowDefinitions>
+                    <RowDefinition/>
+                    <RowDefinition Height="Auto"/>
+                    <RowDefinition Height="0.3*"/>
+                </Grid.RowDefinitions>
+                <Grid.ColumnDefinitions>
+                    <ColumnDefinition/>
+                    <ColumnDefinition/>
+                </Grid.ColumnDefinitions>
+                <TextBlock Grid.Column="0" Grid.Row="0" Text="{DynamicResource Executor}" HorizontalAlignment="Left" FontSize="16" VerticalAlignment="Center"/>
+                <TextBox x:Name ="ConfigurationSettings_Executor" Grid.Column="1" Grid.Row="0" Height="25px" TextAlignment="Right"/>
+
+                <TextBlock Grid.Column="0" Grid.Row="1" Text="{DynamicResource FolderPath}" 
+                       HorizontalAlignment="Left" FontSize="16"
+                       VerticalAlignment="Center"/>
+                <TextBox x:Name ="ConfigurationSettings_FolderPath" Grid.Column="0" Grid.ColumnSpan="2" Grid.Row="2" Height="25" TextAlignment="Right"/>
+            </Grid>
+        </GroupBox>
+
+
+        <Button x:Name="SaveSettingsCommand" Content="{DynamicResource Save_button}" 
+                Grid.Row="2" Grid.Column="0" FontSize="20" 
+                HorizontalAlignment="Right" VerticalAlignment="Bottom" BorderBrush="White" Foreground="White" Width="135">
+            <Button.Background>
+                <LinearGradientBrush EndPoint="0.5,1" MappingMode="RelativeToBoundingBox" StartPoint="0.5,0">
+                    <GradientStop Color="Black"/>
+                    <GradientStop Color="#FF043D5D" Offset="0.074"/>
+                </LinearGradientBrush>
+            </Button.Background>
+        </Button>
 
 
     </Grid>
