--- a/PriceApp.UI/Resources/lang.xaml
+++ b/PriceApp.UI/Resources/lang.xaml
@@ -15,5 +15,13 @@
     <v:String x:Key="PaymentType">Тип оплаты</v:String>
     <v:String x:Key="Price">Цена предложения</v:String>
     <v:String x:Key="Delete_button">Удалить</v:String>
+    <v:String x:Key="RefinancingRate">Ставка рефинансирования</v:String>
+    <v:String x:Key="UserSettings">Пользовательские настройки</v:String>
+    <v:String x:Key="Executor">Исполнитель</v:String>
+    <v:String x:Key="FolderPath">Путь к папке</v:String>
+    <v:String x:Key="New_button">Новый</v:String>
+    <v:String x:Key="Place">Место</v:String>
+    <v:String x:Key="ProviderName">Наменование поставщика</v:String>
+    <v:String x:Key="ResultPriceAmount">Итого</v:String>
 
 </ResourceDictionary>
